<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    tools:context=".views.general.NotificationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/app_bar"
        android:orientation="horizontal">

        <TextView
            style="@style/TitleFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_weight="1"
            android:text="Notifications"
            android:textColor="@color/black"
            android:textSize="@dimen/text_25"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:id="@+id/btn_check_noti"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/margin_20"
            android:background="@drawable/ic_noti_check"
            android:contentDescription="Check noti"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/noti_empty_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_empty_noti"
            android:contentDescription="@string/empty" />

        <TextView
            style="@style/TextFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/margin_20"
            android:text="@string/you_are_all_set"
            android:textColor="@color/black"
            android:textSize="@dimen/text_20" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/noti_not_logged_in_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_noti_not_logged_in"
            android:contentDescription="@string/empty" />

        <TextView
            android:id="@+id/tv_noti_not_logged_in"
            style="@style/TextFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/margin_20"
            android:text="@string/log_in_to_see_noti"
            android:textColor="@color/black"
            android:textSize="@dimen/text_20" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/noti_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>