...
        android:title="@string/home" />
    <item
        android:id="@+id/browse_fragment"
        android:icon="@drawable/ic_browse"
        android:title="@string/browse" />
    <item
        android:id="@+id/noti_fragment"
        android:icon="@drawable/ic_noti"
        android:title="@string/notification" />
    <item
        android:id="@+id/account_fragment"
        android:icon="@drawable/ic_account"
        android:title="@string/account" />
</menu>
